# enchanted-plugin-template

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
config/: template_config.yaml
src/enchanted_plugin_template/: template_parser.py  template_runner.py
tests/: test_plugin_integration.py  test_template_parser.py  test_template_runner.py
